--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "encurtador-url",
   "version": "1.0.0",
   "description": "Encurtador de URL",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node ./",
-    "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules --no-notify src/index.ts",
+    "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules --no-notify src/server.ts",
     "build": "tsc -p .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -23,9 +23,13 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "@types/shortid": "^0.0.29",
+    "@types/uuid": "^8.3.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "http-status-codes": "^2.1.4",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nanoid": "^3.1.30",
+    "uuid": "^8.3.2"
   }
 }
